[ADD] Vistas de Conductor: Dashboard e Historial de viajes

--- a/src/assets/css/global-styles.css
+++ b/src/assets/css/global-styles.css
@@ -101,6 +101,7 @@
 
   /* Negro */
   --color-black: #000000;
+  --color-secondary: #6c757d;
 
   /* PrimeReact Overrides */
   --border-radius: 12px;
