[ADD] Flujo de los viajes de conductor y pasajero completo, vista de TripHistory de ambos roles funcionales

--- a/src/assets/css/global-styles.css
+++ b/src/assets/css/global-styles.css
@@ -408,3 +408,11 @@ code {
   }
 }
 
+/* PrimeReact Dropdown List Override */
+.p-dropdown-items {
+  padding-left: 0 !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
+}
+
